# fa-pg-superheroes

./: .env.template  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  prestart.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 98cf8338630e_create_superheroes_table.py
src/: bootstrap.py  router.py  settings.py
src/apps/superheroes/: depends.py  exceptions.py  router.py
src/apps/superheroes/repositories/: superheroes.py
src/apps/superheroes/schemas/: superheroes.py
src/apps/superheroes/services/: superhero_api.py  superheroes.py
src/apps/superheroes/use_cases/: create.py  list.py
src/core/database/: db_provider.py
src/core/exceptions/: db_exceptions.py
src/core/models/: __init__.py  superheroes.py
src/core/repositories/: db_repository.py
src/core/schemas/: __init__.py  db_schemas.py  http_schemas.py
tests/: conftest.py
tests/integration/: test_superheroes_repository_integration.py
tests/unit/: test_create_superhero_use_case.py  test_list_superheroes_use_case.py  test_parse_api_raw_data.py  test_superhero_api_service.py  test_superheroes_service.py
